--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  /* background-color:#444; */
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
@@ -27,21 +27,19 @@ body, a:link, a:visited, a:active{
 }
 
 .blinkyDancer{
-  background-color: rgb(71, 20, 67);
   height:40px;
   width:40px;
   position:absolute;
 }
 
 .ballRoomDancer{
-  background-color: rgb(20, 34, 71);
   height:40px;
   width:40px;
   position:absolute;
 }
 
 .breakDancer{
-  background-color: rgb(40, 71, 20);
+
   height:40px;
   width:40px;
   position:absolute;
