--- a/styles.css
+++ b/styles.css
@@ -36,16 +36,93 @@ body, a:link, a:visited, a:active{
   height:40px;
   width:40px;
   position:absolute;
+  -webkit-animation-name: spin;
+  -webkit-animation-duration: .1s;
+  animation-name: spin;
+  animation-duration: .1s;
+  animation-iteration-count: infinite;
 }
 
 .breakDancer{
   height:40px;
   width:40px;
   position:absolute;
+  -webkit-animation-name: slide;
+  -webkit-animation-duration: 8s;
+  animation-name: slide;
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
 }
 
-.breakDancer :hover {
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+@-webkit-keyframes slide {
+
+  25% {
+      left: 10vw;
+  }
+
+  50% {
+      left: -10vw;
+  }
+
+  75% {
+      top: 10vh;
+  }
+
 }
 
+@keyframes slide {
+
+  25% {
+    left: 10vw;
+ }
+
+ 50% {
+    left: -10vw;
+ }
+
+ 75% {
+   top: 10vh;
+ }
+
+}
+
+@-webkit-keyframes spin {
+
+  25% {
+      transform: rotate(90deg);
+  }
+
+  50% {
+    transform: rotate(180deg)
+  }
+
+  75% {
+    transform: rotate(270deg)
+  }
+
+  100% {
+    transform: rotate(360deg)
+  }
+
+}
+
+@keyframes spin {
+
+
+  25% {
+    transform: rotate(90deg);
+}
+
+50% {
+  transform: rotate(180deg)
+}
+
+75% {
+  transform: rotate(270deg)
+}
+
+100% {
+  transform: rotate(360deg)
+}
+
+}
